trunk/Archive2/3f/56e1232d6de2bf/main.cpp
#include <iostream>
#include <memory>

int main()
{
  std::unique_ptr<int> p = std::make_unique<int>(3); 
  auto f = [=](int j){ *p = j; }; 
  f(2); 
}